<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    android:verticalScrollbarPosition="defaultPosition"
    tools:context=".forgetPass">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="97dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="0dp"
            android:text="@string/forgetTitle"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/txtUsser"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="Usuario"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:theme="@style/CampoTextoCeleste" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="ejemplo@gmail.com"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:theme="@style/CampoTextoCeleste" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="Nueva Contraseña"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:theme="@style/CampoTextoCeleste" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAcept"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_acept"
        android:text="@string/acept"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.186" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="117dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_acept"
        android:text="@string/cancel"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.186" />


</android.support.constraint.ConstraintLayout>